compiler/tests/fixtures/invalid/semantics/assignment_on_symbol_role.viv
// Invalid: assignment on symbol role

action bad-symbol-assign:
    roles:
        @actor:
            as: initiator
        &flag:
            as: symbol
            from: @actor.flags
    effects:
        &flag.active = true
